Closed Bug 935303 Opened 11 years ago Closed 11 years ago

WebGL.texImage2D should not throw when passed a not-yet-loaded image

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla28

People

(Reporter: bjacob, Assigned: bjacob)

Details

(Whiteboard: webgl-test-needed webg-conformance)

Attachments

(2 files)

Attached file testcase
See attached testcase. Firefox throws in both cases, Chrome doesn't. The spec only mentions throwing SECURITY_ERR on origin violation, it doesn't allow us to throw in other cases.

I don't know if this is covered at all in latest conformance tests; it isn't as of 1.0.2 apparently; flagging webgl-test-needed.
Whiteboard: webgl-test-needed → webgl-test-needed webg-conformance
Attachment #827765 - Flags: review?(jgilbert)
Attachment #827765 - Flags: review?(jgilbert) → review+
http://hg.mozilla.org/integration/mozilla-inbound/rev/c0046e4e055c
Assignee: nobody → bjacob
Target Milestone: --- → mozilla28
https://hg.mozilla.org/mozilla-central/rev/c0046e4e055c
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Keywords: verifyme
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:28.0) Gecko/20100101 Firefox/28.0
Mozilla/5.0 (X11; Linux i686; rv:28.0) Gecko/20100101 Firefox/28.0

Reproduced with Nightly from 2013-11-06.
Verified as fixed with latest Aurora (Build ID:20140203004003): no exception thrown for the attached testcase.
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: