Bug 935303 - WebGL.texImage2D should not throw when passed a not-yet-loaded image - r=jgilbert